QUARTZ.NET CHANGELOG
==============================
http://www.quartz-scheduler.net

Release 2.0 Release Candidate 1, Apr xx, 2012
--------------------------------

This release contains some bug fixes.

POSSIBLE BREAKING CHANGES (since 2.0 beta 2)

* DateBuilder now uses the UTC offset that is active for the date constructed (earlier it was always current offset)


Release 2.0 beta 2, Dec 31, 2011
--------------------------------

This release contains some bug fixes and some compile time breaking changes.

BREAKING CHANGES (since 2.0 beta 1)

* DateBuilder TranslateTime method was removed as it's better done with TimeZoneInfo's ConvertTime
* DateBuilder.IntervalUnit enumeration was replaced by usage of generic IntervalUnit enumeration in root namespace
* DateBuilder now creates all dates in local time zone by default
* ICommandAccessor was renamed IDbAccessor, this interface should normally not be used from client code
* DailyTimeIntervalTrigger was changed to correctly assume start and end times are UTC times (calculation is based on local time)
* DailyTimeIntervalTrigger properties StartTimeOfDayUtc and EndTimeOfDayUtc were renamed to StartTimeOfDay and EndTimeOfDay as they are local times without UTC notion

FIXES

Bug

    * DailyTimeIntervalTriggerPersistenceDelegate does not store weekdays in correct format
    * DisallowConcurrentExecution decorated triggers not being updated after TriggerCompleted
	* DailyTimeIntervalTrigger does not work as expected

Improvement

	* ADO.NET job store: force UTC ticks when storing datetimes

Release 2.0 beta 1, October 2, 2011
-----------------------------------

BREAKING CHANGES

* .NET 1.1 and 2.0 support is dropped
* Quartz.NET now needs .NET version 3.5 SP1 or later to run due to use of new language features and classes
* Many public interface methods have changed from returning arrays to generic IList or ISet interfaces